# novasettings

./: CMakeLists.txt  README.md  novasettings.kdev4  org.kde.novasettings.appdata.xml
.obs/: workflows.yml
src/: CMakeLists.txt  assets.qrc  main.cpp  main.qml  qml.qrc
src/backend/: colorschemesbackend.cpp  cursorsbackend.cpp  desktopeffectsbackend.cpp  desktopeffectsbackend.h  iconsbackend.h  lookandfeelbackend.cpp  lookandfeelbackend.h  miscbackend.cpp  miscbackend.h  mousebackend.cpp  mousebackend.h  plasmastylebackend.cpp  powerbackend.cpp  powerbackend.h  qtstylebackend.cpp  qtstylebackend.h  sddmbackend.cpp  sddmbackend.h  usersbackend.cpp  usersbackend.h  virtualdesktopsbackend.cpp  virtualdesktopsbackend.h  wallpapersbackend.cpp
src/code/: about.cpp  dbusconnection.cpp  dbusconnection.h  keyboardglobal.cpp  keyboardglobal.h  main.cpp  rclink.cpp  rclink.h
src/controls/: About.qml  AboutSystemPage.qml  Appearance.qml  AppearanceMenuPage.qml  ColorSchemesPage.qml  DesktopEffectsPage.qml  Fonts.qml  FormFactor.qml  Generic.qml  Icons.qml  Keyboard.qml  LookAndFeelPage.qml  MainMenuPage.qml  Menu.qml  MiscPage.qml  MousePage.qml  PlasmaStylePage.qml  PowerACPage.qml  PowerBatteryPage.qml  PowerLowBatteryPage.qml  PowerMenuPage.qml  QtStylePage.qml  Screen.qml  SddmPage.qml  Theme.qml  UsersPage.qml  VirtualDesktopsPage.qml  WallpapersPage.qml  main.qml  qml.qrc
src/data/: project.appdata.xml  project.desktop
